[gd_scene load_steps=7 format=3 uid="uid://cdode1cf06an3"]

[ext_resource type="Script" path="res://scenes/game_world_root.gd" id="1_0ue7g"]
[ext_resource type="PackedScene" uid="uid://ba8vmc2i6krq6" path="res://scenes/main_menu.tscn" id="2_lfbnc"]
[ext_resource type="PackedScene" uid="uid://cqgbe7bea1eyy" path="res://scenes/chat_ui.tscn" id="3_6rr2w"]
[ext_resource type="PackedScene" uid="uid://28r1em04x8c4" path="res://scenes/level_1.tscn" id="3_d618y"]
[ext_resource type="PackedScene" uid="uid://c3cr5ho8f27r" path="res://scenes/log_display.tscn" id="4_x62q6"]
[ext_resource type="PackedScene" uid="uid://stxyb5nqlddg" path="res://scenes/mouse_selection_area.tscn" id="6_hkdcl"]

[node name="GameWorldRoot" type="Node"]
script = ExtResource("1_0ue7g")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player_character.tscn")
spawn_path = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LogDisplay" parent="CanvasLayer" instance=ExtResource("4_x62q6")]
visible = false

[node name="ChatUI" parent="CanvasLayer" instance=ExtResource("3_6rr2w")]

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("2_lfbnc")]

[node name="Level1" parent="." instance=ExtResource("3_d618y")]

[node name="MouseSelectionArea" parent="." instance=ExtResource("6_hkdcl")]
